# nb

./: .gitignore  .nvim.lua  AGENTS.md  LICENSE  Makefile  README.md  example.py  guide.py  ideas.md  main.py  pyproject.toml
nb/: __init__.py  cli.py  daemon.py  experiments.py  framework.py  runner.py
nb-ui/: .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
nb-ui/src/: App.svelte  app.css  main.ts  theme.css
nb-ui/src/components/: AltairOutput.svelte  AppShell.svelte  Cell.svelte  CodeDiffModal.svelte  DataTable.svelte  DataTableView.svelte  ExperimentView.svelte  ExperimentsList.svelte  JSONTree.svelte  Markdown.svelte  NotebookHeader.svelte  NotebookList.svelte  NotebookStream.svelte  NotebookView.svelte  PlotlyOutput.svelte  RunSummary.svelte
nb-ui/src/lib/: duckdb.js  duckdb.ts  lazy_load.js  lazy_load.ts  marked.ts  stream.js  stream.ts  tooltip.ts  types.ts
nb-ui/src/stores/: cells.js  cells.ts  notebook.svelte.ts  ui.svelte.ts
nb/tests/: test_cache.py  test_daemon.py  test_experiments.py  test_framework.py  test_runner.py
plan/: 2026-06-14-table-display.md  implementation_plan.md  nb-take-theme-review-plan.md  nb-ui-redesign-plan.md
skills/nb/: guide.py  skill.md
spec/: 2026-06-15-frontend-light-theme-design.md  nb-spec.md  nb-table-spec.md
