[project]
name = "nb"
version = "0.1.0"
description = "A lightweight Python notebook runner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp",
  "click",
  "msgspec>=0.21.1",
]

[project.scripts]
nb = "nb.cli:main"

[project.optional-dependencies]
all = ["polars", "numpy", "plotly", "altair"]
altair = ["altair"]
dev = [
  "pytest",
  "pytest-asyncio",
]
numpy = ["numpy"]
plotly = ["plotly"]
polars = ["polars"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
